# mut-remastered

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.bg-shell/: manifest.json
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/notes/: 2026-03-23-romance-able-quest-npcs.md
.planning/phases/01-server-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client-tui/: Cargo.toml
client-tui/src/: app.rs  dungeon_view.rs  main.rs  map.rs  mesh3d.rs  net.rs  raycast.rs  ui.rs
protocol/: Cargo.toml
protocol/src/: auth.rs  character.rs  codec.rs  combat.rs  lib.rs  world.rs
server/: Cargo.toml
server/migrations/: 001_accounts.sql  002_player_positions.sql  003_world_state.sql  004_account_flags.sql  005_characters.sql  006_character_positions.sql  007_inventory.sql  008_social.sql  009_fix_account_flags.sql
server/src/: config.rs  db.rs  lib.rs  main.rs
server/src/auth/: hash.rs  mod.rs  session.rs
server/src/character/: creation.rs  mod.rs  types.rs
server/src/combat/: engine.rs  manager.rs  mod.rs  tick.rs  types.rs
server/src/dungeon/: generator.rs
server/src/inventory/: commands.rs  loader.rs  types.rs
server/src/net/: listener.rs  mod.rs  ws.rs
server/src/session/: actor.rs
server/src/social/: commands.rs
server/src/world/: commands.rs  loader.rs  mod.rs  types.rs
server/tests/: auth_integration.rs  character_integration.rs  concurrent_connections.rs  inventory_integration.rs  social_integration.rs  world_integration.rs
server/tests/helpers/: mod.rs
web-client/: index.html
world/data/: items.toml  monsters.toml
(+23 files in other folders)
